--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "typescript": "5.0.4"
   },
   "dependencies": {
+    "mongodb": "^5.5.0",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
 }
-
